--- a/transmitter/firmware/Makefile
+++ b/transmitter/firmware/Makefile
@@ -117,7 +117,7 @@ C_INCLUDES += -Iapp
 # compile gcc flags
 ASFLAGS = $(MCU) $(AS_DEFS) $(AS_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections
 
-CFLAGS = $(MCU) $(C_DEFS) $(C_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections
+CFLAGS = $(MCU) $(C_DEFS) $(C_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections -Wno-pointer-sign -Werror
 
 ifeq ($(DEBUG), 1)
 CFLAGS += -g -gdwarf-2
