moving code around; playing with receiver

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-receiver/firmware/build/
-receiver/firmware/.dep
-transmitter/firmware/build
-transmitter/firmware/.dep
+receiver/build/
+receiver/.dep
+transmitter/build
+transmitter/.dep
